* lib/thread.rb (SizedQueue#clear): wake waiting threads when called.   [Bug #9342] [ruby-core:59462]

* test/thread/test_queue.rb: add a test for above.

patched by Justin Collins.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_3@44932 b2dd03c8-39d4-4d8f-98ff-823fe69b080e