version.h
@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 515
+#define RUBY_PATCHLEVEL 516
 
-#define RUBY_RELEASE_DATE "2014-02-06"
+#define RUBY_RELEASE_DATE "2014-02-14"
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 2
-#define RUBY_RELEASE_DAY 6
+#define RUBY_RELEASE_DAY 14
 
 #include "ruby/version.h"
 
