test/thread/test_queue.rb
@@ -10,6 +10,28 @@ class TestQueue < Test::Unit::TestCase
     grind(5, 1000, 15, SizedQueue, 1000)
   end
 
+  def test_sized_queue_clear
+    # Fill queue, then test that SizedQueue#clear wakes up all waiting threads
+    sq = SizedQueue.new(2)
+    2.times { sq << 1 }
+
+    t1 = Thread.new do
+      sq << 1
+    end
+
+    t2 = Thread.new do
+      sq << 1
+    end
+
+    t3 = Thread.new do
+      Thread.pass
+      sq.clear
+    end
+
+    [t3, t2, t1].each(&:join)
+    assert_equal sq.length, 2
+  end
+
   def grind(num_threads, num_objects, num_iterations, klass, *args)
     from_workers = klass.new(*args)
     to_workers = klass.new(*args)
